compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__externals__javascript_only_function_used_by_erlang_module.snap
---
source: compiler-core/src/type_/tests/externals.rs
assertion_line: 16
expression: "@external(javascript, \"one\", \"two\")\nfn js_only() -> Int\n\npub fn main() {\n  js_only()\n}\n"
---
error: Unsupported target
  ┌─ /src/one/two.gleam:5:3
  │
5 │   js_only()
  │   ^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the Erlang target.

Hint: Did you mean to build for a different target?
